sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: not found: value j
			j=j-1	
                        ^AlgInsertionSort:12: error: not found: value j
		setValeur(j,v)
                          ^