sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var v=0
	var n=0
	for (i<- 1 to getNombreValeurs()-1) {
		v=getValeur(i) 
		 while (n>0 && getValeur(n-1)<v) {
			n=i-1
			copie(n-1,n)
			j=j-1	
		} 
		setValeur(j,v)
	}
}
